--- a/app/css/project-custom.css
+++ b/app/css/project-custom.css
@@ -682,5 +682,10 @@ img.loading{
 }
 
 .header{
-  
+  background-color: #813296;
+  width: 100%;
+  margin: 0;
+  color: #fafafa;
+  padding: 20px;
+  padding-bottom: 15px;
 }
