stash for night, will work on mapping command to plugin

--- a/app/css/project-custom.css
+++ b/app/css/project-custom.css
@@ -681,11 +681,11 @@ img.loading{
     display: block;
 }
 
-.header{
+/*.header{
   background-color: #813296;
   width: 100%;
   margin: 0;
   color: #fafafa;
   padding: 20px;
   padding-bottom: 15px;
-}
+}*/
