--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,6 +1,7 @@
 body {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
+  min-width: 770px;
 }
 
 /*
@@ -675,18 +676,160 @@ img.loading{
 }
 
 .header{
-  background-color: #9C27B0;
   width: 100%;
   margin: 0;
-  color: #fafafa;
   padding: 20px;
   padding-bottom: 20px;
 }
 
-.header a{
-  color: #fefefe;
-}
-
 .icon-brand{
   font-size: 1.3em;
+}
+
+/*Initial string fields*/
+
+.rjsf .field-string label,
+.rjsf .tasks .field-string label
+{
+  width: 20%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-top: 4px;
+  margin-bottom: 0;
+  text-align: left;
+}
+
+.rjsf .field-string input,
+.rjsf .tasks .field-string input,
+.rjsf .tasks .field-string select{
+  width: 80%;
+  float: left;
+  margin-bottom: 5px;
+}
+
+.rjsf .ignore legend{
+  display: none;
+}
+
+/* metadata input */
+
+.rjsf .metadata legend {
+  width: 50%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-top: 4px;
+  text-align: left;
+  margin-bottom: 15px;
+  border: none;
+  font-size: 1em;
+}
+
+
+.rjsf .metadata .field-array-of-object{
+  margin-left: 20%;
+}
+
+.rjsf .metadata label{
+  display: none;
+}
+
+.rjsf .metadata input{
+  width: 100%;
+  float: left;
+}
+
+.rjsf .metadata .field-array-of-object .col-xs-10{
+  width: 100%;
+  padding-right: 45px;
+  margin-right: -41px;
+}
+
+.rjsf .metadata .field-array-of-object .col-xs-2{
+  position: relative;
+  right: 0;
+  width: auto;
+  padding: 0;
+  margin: 0;
+}
+
+.rjsf .metadata .form-group{
+  margin-bottom: 5px;
+}
+
+.field-description{
+  display: none;
+}
+
+/*
+  tasks input
+*/
+
+.rjsf .tasks legend {
+  width: 50%;
+  margin-left: 20%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-top: 4px;
+  text-align: left;
+  margin-bottom: 15px;
+  border: none;
+  font-size: 1em;
+}
+
+
+.rjsf .tasks .field-array-of-object .col-xs-10{
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 45px;
+  margin-right: -41px;
+}
+
+.rjsf .tasks .field-array-of-object .col-xs-2{
+  position: relative;
+  right: 0;
+  width: auto;
+  padding: 0;
+  margin: 0;
+}
+
+/*
+  Add remove buttons
+*/
+
+.rjsf .array-item-remove{
+  flex: none!important;
+  width: 31px;
+  height: 31px;
+  border-top-left-radius: 4px!important;
+  border-bottom-left-radius: 4px!important;
+
+}
+
+.rjsf .array-item-add{
+  width: auto!important;
+  float: right;
+  margin-right: 10px!important;
+}
+
+.rjsf .array-item-add button{
+  flex: none!important;
+  padding: 5px 7px;
+  width: 31px;
+  height: 31px;
+}
+
+.rjsf .array-item-move-up,
+.rjsf .array-item-move-down {
+  display: none;
+}
+
+.bordered{
+  border: 1px solid #eeeeee;
+  border-radius: 4px;
 }
