--- a/app/app.global.css
+++ b/app/app.global.css
@@ -764,72 +764,11 @@ img.loading{
   display: none;
 }
 
-/*
-  tasks input
-*/
-
-.rjsf .tasks legend {
-  width: 50%;
-  margin-left: 20%;
-  float: left;
-  position: relative;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-top: 4px;
-  text-align: left;
-  margin-bottom: 15px;
-  border: none;
-  font-size: 1em;
-}
-
-
-.rjsf .tasks .field-array-of-object .col-xs-10{
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 45px;
-  margin-right: -41px;
-}
-
-.rjsf .tasks .field-array-of-object .col-xs-2{
-  position: relative;
-  right: 0;
-  width: auto;
-  padding: 0;
-  margin: 0;
-}
-
-/*
-  Add remove buttons
-*/
-
-.rjsf .array-item-remove{
-  flex: none!important;
-  width: 31px;
-  height: 31px;
-  border-top-left-radius: 4px!important;
-  border-bottom-left-radius: 4px!important;
-
-}
-
-.rjsf .array-item-add{
-  width: auto!important;
-  float: right;
-  margin-right: 10px!important;
-}
-
-.rjsf .array-item-add button{
-  flex: none!important;
-  padding: 5px 7px;
-  width: 31px;
-  height: 31px;
-}
-
-.rjsf .array-item-move-up,
-.rjsf .array-item-move-down {
-  display: none;
-}
-
 .bordered{
   border: 1px solid #eeeeee;
   border-radius: 4px;
+}
+
+.configForm label{
+  margin-top: 5px;
 }
