--- a/app/app.global.css
+++ b/app/app.global.css
@@ -772,3 +772,40 @@ img.loading{
 .configForm label{
   margin-top: 5px;
 }
+
+.loader{
+  display: inline-block;
+  margin-left: 25px;
+  margin-top: 5px;
+}
+
+.ball-clip-rotate-multiple{
+  margin-left: 10px;
+}
+
+.ball-clip-rotate-multiple > div{
+  border: 2px solid #999;
+  border-bottom-color: transparent;
+  border-top-color: transparent;
+}
+
+.ball-clip-rotate-multiple > div:last-child {
+  border-color: #999 transparent;
+}
+
+.m-l-sm{
+  margin-left: 5px;
+}
+
+.icon-brand{
+  color: #0C4379;
+}
+
+.icon-brand:hover{
+  font-style: none;
+}
+
+.brand-link:focus,
+.brand-link:hover{
+  text-decoration: none!important;
+}
