added performant logs and list of links to change dir

--- a/lib/css/rinobot.css
+++ b/lib/css/rinobot.css
@@ -83,3 +83,10 @@ html, body {
 #root > div{
   height: 100%;
 }
+
+.table > tbody > tr > td{
+  padding: 8px;
+  line-height: 1.4;
+  vertical-align: top;
+  border-top: none;
+}
