--- a/lib/css/rinobot.css
+++ b/lib/css/rinobot.css
@@ -1,3 +1,7 @@
+.light-grey-background{
+  background-color: #f7f8fb;
+}
+
 body {
   font-size: 14px;
   font-weight: 400;
@@ -98,19 +102,20 @@ html, body {
   padding: 20px;
 }
 
-body{
-  background-color: #f7f8fb;
-}
-
 .sidebar {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   /*background-color: #f7f8fb;*/
+  width: 160px;
   background-color: white;
   border-right: 1px solid #dddddd;
   padding-top: 20px;
+}
+
+.main-container .container-fluid{
+  margin-left: 160px;
 }
 
 .sidebar .list-group-item{
@@ -153,4 +158,8 @@ body{
     background-image: -webkit-linear-gradient(#7C87A8 0,#7582A8 100%);
     background-image: linear-gradient(#7C87A8 0,#7582A8 100%);
     z-index: 1;
+}
+
+.fa-small{
+  font-size: 0.8em;
 }
