--- a/lib/css/rinobot.css
+++ b/lib/css/rinobot.css
@@ -8,6 +8,7 @@ body {
   font-weight: 400;
   min-width: 770px;
   -webkit-font-smoothing: antialiased;
+  background-color: #f7f8fb;
 }
 
 .container {
@@ -136,14 +137,14 @@ body {
 }
 
 .sidebar .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
-    z-index: 2;
-    color: #ffffff;
-    background-color: #2595ff;
-    border-color: #808FBF;
-    background-color: #808FBF;
-    background-image: -webkit-linear-gradient(#7C87A8 0,#7582A8 100%);
-    background-image: linear-gradient(#7C87A8 0,#7582A8 100%);
-    z-index: 1;
+  z-index: 2;
+  color: #ffffff;
+  background-color: #2595ff;
+  border-color: #808FBF;
+  background-color: #808FBF;
+  background-image: -webkit-linear-gradient(#7C87A8 0,#7582A8 100%);
+  background-image: linear-gradient(#7C87A8 0,#7582A8 100%);
+  z-index: 1;
 }
 
 .log {
@@ -164,4 +165,14 @@ body {
 .log .pseudo-fa{
   vertical-align: middle;
   margin-right: 3px;
+}
+
+.plugins a{
+  color: #7E86A0;
+}
+
+.plugins .btn-primary{
+  background-color: #7E86A0;
+  color: white;
+  border: 1px solid #7E86A0;
 }
