--- a/lib/css/rinobot.css
+++ b/lib/css/rinobot.css
@@ -8,7 +8,7 @@ body {
   font-weight: 400;
   min-width: 770px;
   -webkit-font-smoothing: antialiased;
-  background-color: #f7f8fb;
+  background-color: #ffffff;
 }
 
 .container {
@@ -218,115 +218,18 @@ body {
     margin-right:-4px;
 }
 
-
-
-/*button
-    content: '\f111';
-    pluss
-    content: '\f055';
-    arrow
-    content: "\f078";
-    font-family: 'FontAwesome';
-    content: "\f111";
-    color: #6dcff6;
-    font-size: 20px;
-    */
-
-
-    .experiences {
-        padding-left: 15px;
-        margin-top: -1px;
-    }
-    .experiences li {
-        padding-left: 33px;
-        margin-bottom: 2.5em;
-        list-style: none;
-    }
-    /*ul.experiences li.green {
-        background: url('../img/misc/list-bullet-green.png') no-repeat;
-    }
-    ul.experiences li.blue {
-        background: url('../img/misc/list-bullet-blue.png') no-repeat;
-    }
-    ul.experiences li.pink {
-        background: url('../img/misc/list-bullet-pink.png') no-repeat;
-    }*/
-    .where {
-        font-size: 1.2857em; /* 18/16 -> 18px */
-        font-weight: 300;
-        display: inline;
-        margin-right: 0.5em;
-    }
-    .what {
-        font-size: 0.75em; /* 12/16 -> 12px */
-        font-weight: 700;
-        text-transform: uppercase;
-        color: #fff;
-        background-color: #444444;
-        display: inline-block;
-        padding: 0 12px;
-        margin: -5px 0.5em 0 0 !important;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        border-radius: 3px;
-    }
-    .what.green {
-        background-color: #c4df9b;
-    }
-    .what.blue {
-        background-color: #6dcff6;
-    }
-    .what.pink {
-        background-color: #f06eaa;
-    }
-    .when {
-        float: right;
-        color: #b9b9b9;
-        font-style: italic;
-    }
-    .description {
-        display: block;
-        margin-top: 0.5em;
-    }
-
-
-.experiences li {
-  position:relative; /* so that pseudoelements are positioned relatively to their "li"s*/
-  /* use padding-bottom instead of margin-bottom.*/
-  margin-bottom: -22px; /* This overrides previously specified margin-bottom */
-  padding-bottom: 2.5em;
-}
-
-.experiences li:after {
-  /* bullets */
-  font-family: 'FontAwesome';
-  content: "\f078";
-  color: #ccc;
-  font-size: 30px;
+.position-x-task{
   position: absolute;
-  left: 6px; /*adjust manually*/
-  top: -15px;
+  right: 120px;
+  top: 10px;
 }
 
-.experiences li:before {
-  /* lines */
-  content:"";
+.position-x-file{
   position: absolute;
-  left: 20px; /* adjust manually */
-  border-left: 2px solid #ccc;
-  height: 100%;
-  width: 1px;
+  right: 126px;
+  font-size:1.5em;
 }
 
-.experiences li:first-child:before {
- /* first li's line */
- top: 13px; /* moves the line down so that it disappears under the bullet. Adjust manually */
-}
-
-.experiences li:last-child:before {
-  /* last li's line */
- height: 6px; /* shorten the line so it goes only up to the bullet. Is equal to first-child:before's top */
- }
 
 .config .form-control {
   border: 1px solid #eeeeee;
