--- a/lib/css/rinobot.css
+++ b/lib/css/rinobot.css
@@ -280,6 +280,14 @@ body {
     right: 40px;
 }
 
+.task-position-x-file{
+  font-size: 1.2em;
+  float: right;
+  position: relative;
+  top: 7px;
+  right: 40px;
+}
+
 .position-x-task{
   position: relative;
   top: -28px;
