--- a/lib/css/rinobot.css
+++ b/lib/css/rinobot.css
@@ -150,9 +150,11 @@ body {
   line-height: 1.4;
   vertical-align: top;
   border-top: none;
+  margin-left: 7px;
 }
 
 .log .pseudo{
+  margin-left: 7px;
   display: inline-block;
   background: rgba(0,0,0,0.06);
   width: 80%;
@@ -285,7 +287,7 @@ body {
   float: right;
   position: relative;
   top: 7px;
-  right: 40px;
+  right: 3px;
 }
 
 .position-x-task{
@@ -298,6 +300,15 @@ body {
   position: absolute;
   right: 72px;
 }
+
+.pipeline-metadata-x-file {
+    font-size: 1.2em;
+    float: right;
+    position: relative;
+    top: 6px;
+    right: 40px;
+}
+
 
 .position-question{
   position: absolute;
@@ -395,4 +406,62 @@ span.block-title{
 
 .main {
   margin-top: 60px;
+}
+
+.pipeline{
+  height: 100%;
+  border-left: 1px solid #bfcfda;
+}
+
+.sf_wrapper {
+  padding: 0px;
+}
+
+.labels {
+  float: left;
+  position: relative;
+}
+
+.grey_horz {
+  position: absolute;
+  top: 0;
+  left: 0px;
+  width: 100px;
+  height: 32px;
+  border-left: 1px solid white;
+  border-bottom: 1px solid #bfcfda;
+  display: block;
+}
+
+.grey_horz_first{
+  background: white;
+  margin-left: -1px;
+}
+
+.grey_vert {
+  top: 13px;
+  left: 40px;
+  height: 100%;
+  width: 1px;
+  background: #bfcfda;
+}
+
+.btn-add-pipeline{
+  position: relative;
+  left: -19px;
+  top: -2px;
+}
+
+.btn-add-metadata{
+  position: relative;
+  left: -16px;
+  top: -2px;
+}
+
+.config .col-xs-1-sm {
+  width: 2%;
+}
+
+.config .col-xs-offset-1-sm{
+  margin-left: 4%;
 }
