added basic new UI, working with a lot of bugs and errors

--- a/lib/css/rinobot.scss
+++ b/lib/css/rinobot.scss
@@ -583,3 +583,7 @@ span.block-title{
 .select-parent .Select-control{
   height: 50px;
 }
+
+.table > tbody > tr.active > td{
+  background-color: #e6e6e6;
+}
